# bevy_2d_dissolve

./: .gitignore  Cargo.toml  Makefile  README.md  index.html
assets/shaders/: dissolve_2d.wgsl
examples/: simple.rs
src/: lib.rs  material.rs
